# J2Cpp

./: .gitignore  CMakeLists.txt  ComparisionOfJavaAndCpp.txt  Doxyfile  JavaToCpp.pro  README  STRUCTURE  windowsMake.bat
doc/: .gitignore  CMakeLists.txt  DESC  Doxyfile
examples/: DESC
include/: DESC
lib/: DESC
source/parser/: parser.hpp
source/registration/: registration.cpp  registration.h
source/tokenizer/: parsedfile.cpp  parsedfile.h  parser.cpp  parser.h  tokenizer.cpp  tokenizer.h
src/: CMakeLists.txt  DESC  globals.h  main.cpp  version.h.in
src/parser/: CMakeLists.txt  parser.cpp  parser.h
src/registration/: CMakeLists.txt
src/tokenizer/: CMakeLists.txt  tokenizer.h
unit/: DESC
